# ShapeAXI

./: DentalModelSeg.md  README.md  install_pytorch3d.sh  num_verts.py  pyproject.toml  requirements.txt  requirements_pytorch3d.txt  saxi.yml  saxi_eval.py  saxi_predict_v3.py  saxi_predict_v4.py  saxi_train_v2.py  stl_to_vtk.py
doc/images/: README.md
lightning_logs/version_0/: events.out.tfevents.1721830887.medusa.ia.unc.edu.2411601.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1721831178.medusa.ia.unc.edu.2416107.0
lightning_logs/version_10/: events.out.tfevents.1722009090.medusa.ia.unc.edu.757733.0  hparams.yaml
lightning_logs/version_11/: events.out.tfevents.1722259342.medusa.ia.unc.edu.50583.0
lightning_logs/version_12/: events.out.tfevents.1722261010.medusa.ia.unc.edu.74793.0
lightning_logs/version_13/: events.out.tfevents.1722263268.medusa.ia.unc.edu.110357.0
lightning_logs/version_14/: events.out.tfevents.1722263595.medusa.ia.unc.edu.115338.0  hparams.yaml
lightning_logs/version_15/: events.out.tfevents.1722263682.medusa.ia.unc.edu.116962.0  hparams.yaml
lightning_logs/version_16/: events.out.tfevents.1722264164.medusa.ia.unc.edu.124942.0  hparams.yaml
lightning_logs/version_17/: events.out.tfevents.1722264308.medusa.ia.unc.edu.127699.0
lightning_logs/version_18/: events.out.tfevents.1722264466.medusa.ia.unc.edu.130355.0  hparams.yaml
lightning_logs/version_19/: events.out.tfevents.1722264498.medusa.ia.unc.edu.131140.0
lightning_logs/version_2/: events.out.tfevents.1721927757.medusa.ia.unc.edu.3800018.0  hparams.yaml
lightning_logs/version_20/: events.out.tfevents.1722264561.medusa.ia.unc.edu.132372.0  hparams.yaml
lightning_logs/version_21/: events.out.tfevents.1722265281.medusa.ia.unc.edu.143290.0
lightning_logs/version_22/: events.out.tfevents.1722268745.medusa.ia.unc.edu.198188.0  hparams.yaml
lightning_logs/version_23/: events.out.tfevents.1722279783.medusa.ia.unc.edu.361172.0
lightning_logs/version_24/: events.out.tfevents.1722344801.medusa.ia.unc.edu.1267162.0
lightning_logs/version_3/: events.out.tfevents.1721928994.medusa.ia.unc.edu.3819206.0
lightning_logs/version_4/: events.out.tfevents.1721932234.medusa.ia.unc.edu.3867639.0  hparams.yaml
lightning_logs/version_5/: events.out.tfevents.1721939455.medusa.ia.unc.edu.3974815.0  hparams.yaml
lightning_logs/version_6/: events.out.tfevents.1722008668.medusa.ia.unc.edu.750240.0  hparams.yaml
lightning_logs/version_7/: events.out.tfevents.1722008729.medusa.ia.unc.edu.751459.0
lightning_logs/version_8/: events.out.tfevents.1722008839.medusa.ia.unc.edu.753378.0
lightning_logs/version_9/: events.out.tfevents.1722008883.medusa.ia.unc.edu.754406.0
notebooks/: attention_shape_nn.ipynb
output_dir/: Deg_classification_aggregate_long_exists_scale_factor.csv
projects/: airwayObstruction.md
shapeaxi/: IcoConcOperator.py  __about__.py  __init__.py  append_surf.py  compute_min_scale.py  dental_model_seg.py  fit_mesh.py  loss.py  obj_to_vtk.py  post_process.py  saxi_dataset.py  saxi_eval.py  saxi_eval_agg.py  saxi_folds.py  saxi_gradcam.py  saxi_layers.py  saxi_logger.py  saxi_losses.py  saxi_nets.py  saxi_predict.py  saxi_train.py  saxi_transforms.py  see_classification_report.py  split_train_eval.py  utils.py
shapeaxi/Gradcam/: create_3Dbrain.py  create_gradcam.py
shapeaxi/notebooks/: attention_shape_nn.ipynb  fit_mesh.ipynb  mesh_resampling.ipynb  octree_resnet.ipynb  saxi_depth.ipynb  teeth_land_challenge.ipynb
src/: CMakeLists.txt  compute_min_scale.py  flyby.yml  obj_to_vtk.py  post_process.py  predict.py  run_saxi_folds.py  saxi_dataset.py  saxi_eval.py  saxi_folds.py  saxi_gradcam.py  saxi_logger.py  saxi_nets.py  saxi_predict.py  saxi_train.py  saxi_transforms.py  split_train_eval.py  teeth_eval.py  test.py  utils.py
src/Resources/UI/: ASO.ui.autosave
src/Testing/: CMakeLists.txt
src/dl/: CBCT.py  IOS.py  Methode.py
src/lightning_logs/version_0/: events.out.tfevents.1722346057.medusa.ia.unc.edu.1287729.0  hparams.yaml
src/lightning_logs/version_1/: events.out.tfevents.1722346135.medusa.ia.unc.edu.1289186.0  hparams.yaml
src/lightning_logs/version_10/: events.out.tfevents.1722351712.medusa.ia.unc.edu.1371468.0  hparams.yaml
src/lightning_logs/version_11/: events.out.tfevents.1722352393.medusa.ia.unc.edu.1381259.0  hparams.yaml
src/lightning_logs/version_12/: events.out.tfevents.1722352436.medusa.ia.unc.edu.1382367.0  hparams.yaml
src/lightning_logs/version_2/: events.out.tfevents.1722350469.medusa.ia.unc.edu.1350648.0  hparams.yaml
src/lightning_logs/version_3/: events.out.tfevents.1722350531.medusa.ia.unc.edu.1351852.0
src/lightning_logs/version_4/: events.out.tfevents.1722351077.medusa.ia.unc.edu.1360497.0  hparams.yaml
src/lightning_logs/version_5/: events.out.tfevents.1722351399.medusa.ia.unc.edu.1365424.0
src/lightning_logs/version_6/: events.out.tfevents.1722351448.medusa.ia.unc.edu.1366463.0
src/lightning_logs/version_7/: events.out.tfevents.1722351504.medusa.ia.unc.edu.1367579.0  hparams.yaml
src/lightning_logs/version_8/: events.out.tfevents.1722351599.medusa.ia.unc.edu.1369238.0
src/lightning_logs/version_9/: events.out.tfevents.1722351614.medusa.ia.unc.edu.1369779.0
src/notebooks/: attention_shape_nn.ipynb  data_loading.ipynb  hilbert.ipynb  mesh_resampling.ipynb  nerf_rendering.ipynb  octformer.ipynb  octree_unet.ipynb  saxi_former.ipynb  saxi_ico_former.ipynb  saxi_idx_former.ipynb  saxi_idx_unet_former.ipynb  saxi_mha_v.ipynb
src/shapeaxi/: __about__.py  __init__.py  append_surf.py  colors.py  convert_surf.py  dental_model_path.json  dental_model_seg.py  layers.py  mesh_sampling.py  obj_to_vtk_teeth_grand_challenge.py  saxi.py  saxi_dataset.py  saxi_diffusion.py  saxi_eval.py  saxi_eval_agg.py  saxi_flows.py  saxi_folds.py  saxi_gradcam.py  saxi_layers.py  saxi_logger.py  saxi_nets.py  saxi_nets_lightning.py  saxi_point_nets.py  saxi_predict.py  saxi_train.py  saxi_transforms.py  split_train_eval.py  utils.py
src/shapeaxi/notebooks/: attention_shape_nn.ipynb  test.ipynb  (+2 more)
tests/: requirements.txt
(+15 files in other folders)
